--- a/style.css
+++ b/style.css
@@ -1,33 +1,50 @@
-html,body {
-    height: 100vh;
-    width: 100vw;
+html, body {
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 .container {
-    height:100%;
-    width: 100%;
     display: flex;
-
 }
 
+img {
+    max-width: 50%;
+    max-height: 80%;
+    border-radius: 30px;
+   margin-left: auto;
+}
+
+.name {
+    margin-right: auto;
+    font-size: 50px;
+}
+
+
+
 .pretty{
-    background-image: url(imgs/Space.jpg);
+    background-image: url(imgs/beach.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 37%;
-    height: 100%;
+    min-height: 100%;
+    
 }
 
 .logo {
-    background-color: black;
-    opacity: 0.3;
+    background-color: rgba(0, 0, 0, 0.3);
     color: aliceblue;
     position: relative;
     width: 100%;
     height: 15%;
     top: 20.05vh;
+    display: flex;
+    align-items: center;
 }
 
 .info{
-    width: 63%;
+    width: 67%;
+    margin-top: -22px;
 }
 
 .top-text {
@@ -37,20 +54,33 @@ html,body {
 
 .text{
     position: relative;
-    top: 40%;
+    top: 50%;
     padding: 0 40px 10px 50px;
     max-width: 70%;
 }
 
 .form-info {
     background-color:slateblue;
-    min-height: 30vh;
     display: flex;
+    min-height: 30vh;
 }
 
 .lower {
     background-color: darkslateblue;
     height: 35vh;
+}
+
+button {
+    padding: 15px 50px;
+    border-radius: 6px;
+    margin-left: 51px;
+    margin-top: 30px;
+    position: relative;
+}
+
+.log-in {
+    margin-left: 51px;
+    margin-top: 30px;
 }
 
 legend {
@@ -70,9 +100,34 @@ input, label{
 input {
     width: 200px;
     margin-bottom: 20px;
+    
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.input-box {
+    float:left;
+    margin-right:20px;
 }
 
 .inputs{
     padding-left: 40px;
     min-width: 85%;
+}
+
+input:valid {
+    border-color: green;
+}
+
+input:invalid {
+    border-color: red;
+}
+
+input[type="text"]:focus, 
+input[type='email']:focus,
+input[type='tel']:focus,
+input[type='password']:focus {
+    outline: none;
+    border-color: aqua;
+    
 }
